# minimal-stack

./: .gitignore  LICENSE  minimal.cabal  stack.yaml
app/: Main.hs
bench/: Main.hs
src/: Lib.hs
test/: Main.hs
