name: minimal
description: Minimal Stack Executable Project template
version: 0.0.0
build-type: Simple
cabal-version: >= 1.10
license: MIT
license-file: LICENSE
extra-source-files: README.md

source-repository head
  type: git
  location: https://github.com/vitorsvieira/minimal-stack.git

library
  default-language: Haskell2010
  hs-source-dirs: src
  exposed-modules: Lib
  build-depends: base >= 4.7 && < 5

executable minimal-app
  default-language: Haskell2010
  hs-source-dirs: app
  main-is: Main.hs
  build-depends: base >= 4.7 && < 5, minimal

test-suite minimal-test
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs: test
  main-is: Main.hs
  build-depends: base >= 4.7 && < 5, minimal, hspec

benchmark minimal-bench
  type: exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs: bench
  main-is: Main.hs
  build-depends: base >= 4.7 && < 5, minimal, criterion
